--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -6,6 +6,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="/global.css">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
